# LQGGarbledCircuits

./: .gitignore  Actuator.h  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CTestTestfile.cmake  Cloud.h  DummySetup.h  DummySubsystem.h  Makefile  README.md  cmake_install.cmake  communication_profiling  communication_profiling_hybrid  compute_times.py  gates_profiling  get_communication_data.py  hybrid_times.py  plot_gates.py  setup.sh  subsystem.h
Data/: Nu.txt  Tau.txt  xr.txt
all_data/y10_u2/: A.txt  B.txt  F.txt  K.txt  L.txt  Nu.txt  Tau.txt  V.txt  W.txt  process_noise.txt  sensor_noise.txt  ur.txt  xr.txt
all_data/y20_u4/: A.txt  B.txt  F.txt  K.txt  L.txt  Nu.txt  Tau.txt  ur.txt  x0.txt  xr.txt
all_data/y250_u50/: A.txt  B.txt  C.txt  K.txt  L.txt  Nu.txt  Tau.txt  ur.txt  x0.txt  xr.txt
all_data/y50_u10/: A.txt  B.txt  F.txt  K.txt  L.txt  Nu.txt  Tau.txt  ur.txt  x0.txt  xr.txt
include/: Cloud.h  DummySubsystem.h  cloud_hybrid.h  dummy_subsystem_hybrid.h  fixedPoint.h  garbled_circuit_user.h  subsystem.h  subsystem_hybrid.h  utility_functions.h
main/: CMakeLists.txt  cloud.cpp  cloud_hybrid.cpp  cloud_time.cpp  profile_cloud_time_cloud.cpp  profile_cloud_time_system.cpp  profile_system_time_cloud.cpp  profile_system_time_system.cpp  system.cpp  system_hybrid.cpp  system_time.cpp
main/times/: cloud.cpp  cloud_time.cpp  system.cpp  system_time.cpp
test/: .lqg.cpp.swp  CMakeLists.txt  CTestTestfile.cmake  Makefile  cloud.cpp  cmake_install.cmake  system.cpp
